crates/trunk-ir-cranelift-backend/src/passes/snapshots/trunk_ir_cranelift_backend__passes__func_to_clif__tests__call_indirect_to_clif.snap
---
source: crates/trunk-ir-cranelift-backend/src/passes/func_to_clif.rs
expression: result
---
core.module @test {
  clif.func {sym_name = "test_fn", type = clif.func_sig<() -> core.i32>} {
      %0 = arith.const {value = 0} : core.i32
      %1 = arith.const {value = 42} : core.i32
      %2 = clif.call_indirect %0, %1 {sig = clif.func_sig<(core.i32) -> core.i32>} : core.i32
      clif.return %2
  }
}
