crates/trunk-ir-cranelift-backend/src/passes/snapshots/trunk_ir_cranelift_backend__passes__func_to_clif__tests__closure_struct_anyref_adaptation.snap
---
source: crates/trunk-ir-cranelift-backend/src/passes/func_to_clif.rs
assertion_line: 493
expression: result
---
core.module @test {
  !_closure = adt.struct(core.i64, core.ptr) {fields = [[@func_ptr, core.i64], [@env, core.ptr]], name = @_closure}

  clif.func {sym_name = @test_fn, type = clif.func_sig<() -> core.i32>} {
      %0 = clif.symbol_addr {sym = @lifted_fn} : core.ptr
      %1 = arith.const {value = 0} : wasm.anyref
      %2 = adt.struct_new %0, %1 {type = !_closure} : !_closure
      %3 = adt.struct_get %2 {field = 0, type = !_closure} : core.i64
      %4 = adt.struct_get %2 {field = 1, type = !_closure} : core.ptr
      %5 = clif.call_indirect %3, %4 {sig = clif.func_sig<(core.ptr) -> core.i32>} : core.i32
      clif.return %5
  }
}
