crates/trunk-ir-cranelift-backend/src/passes/snapshots/trunk_ir_cranelift_backend__passes__func_to_clif__tests__func_func_to_clif.snap
---
source: crates/trunk-ir-cranelift-backend/src/passes/func_to_clif.rs
expression: result
---
core.module @test {
  clif.func {sym_name = "test_fn", type = clif.func_sig<() -> core.nil>} {
      clif.return
  }
}
