crates/trunk-ir-cranelift-backend/src/passes/snapshots/trunk_ir_cranelift_backend__passes__func_to_clif__tests__tail_transfers_to_clif.snap
---
source: crates/trunk-ir-cranelift-backend/src/passes/func_to_clif.rs
expression: result
---
core.module @test {
  !t0 = clif.func_sig<(core.i32) -> (), {call_conv = @tail}>

  clif.func {sym_name = "direct_target", type = !t0} {
    ^bb0(%0: core.i32):
      clif.return
  }
  clif.func {sym_name = "direct_caller", type = !t0} {
    ^bb0(%0: core.i32):
      clif.return_call %0 {callee = @direct_target}
  }
  clif.func {sym_name = "indirect_caller", type = clif.func_sig<(core.ptr, core.i32) -> (), {call_conv = @tail}>} {
    ^bb0(%0: core.ptr, %1: core.i32):
      clif.return_call_indirect %0, %1 {sig = !t0}
  }
}
